--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ set(hello_names
         02_04_lighting_maps
         02_05_light_casters
         02_06_multiple_lights
+        04_01_depth_testing
 )
 
 foreach (name ${hello_names})
