--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,7 @@ set(hello_names
         04_03_blending
         04_04_face_culling
         04_05_framebuffers
+        04_06_cubemaps
 )
 
 foreach (name ${hello_names})
